--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebase-admin": "^9.4.2",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "swr": "^0.3.11"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.17",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
