:fire: Switching from api to context

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 /.pnp
 .pnp.js
 .env
+
+# firebase
 soullocke-f7500-firebase-adminsdk-wuzb4-9b55d0d2ff.json
+firebaseConfig.ts
 
 # testing
 /coverage
