--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.9.4",
     "firebase": "^8.2.1",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sass": "^1.32.0",
     "swr": "^0.3.11"
   },
   "devDependencies": {
