--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.9.4",
+    "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "next": "10.0.4",
     "react": "17.0.1",
