--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.1",
     "next": "10.0.4",
     "react": "17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
