--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
+    "react-palette": "^1.0.2",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
   },
