--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.9.4",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
+    "mixpanel-browser": "^2.41.0",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
