--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "antd": "^4.9.4",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "mixpanel-browser": "^2.41.0",
-    "next": "10.0.4",
+    "next": "^12.3.0",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
@@ -21,8 +22,13 @@
     "ui-box": "^4.1.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "^14.14.17",
     "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "eslint": "^8.23.0",
+    "eslint-config-next": "^12.3.0",
+    "typescript": "4.8.3"
   }
 }
