--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
+    "react-feather": "^2.0.10",
     "react-palette": "^1.0.2",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
