--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "antd": "^4.9.4",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
@@ -16,9 +17,10 @@
     "next": "^12.3.0",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
     "react-palette": "^1.0.2",
+    "react-popper": "^2.3.0",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
   },
@@ -28,6 +30,7 @@
     "@types/node": "^14.14.17",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.3.0",
     "typescript": "4.8.3"
