--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@tippyjs/react": "^4.2.6",
     "antd": "^4.9.4",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
