--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.3.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.3"
   }
 }
