--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "17.0.2",
     "react-feather": "^2.0.10",
     "react-palette": "^1.0.2",
+    "react-toastify": "^9.1.1",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
   },
