--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tippyjs/react": "^4.2.6",
+    "@vercel/analytics": "^0.1.6",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "mixpanel-browser": "^2.41.0",
