--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^4.9.4",
+    "@tippyjs/react": "^4.2.6",
+    "@vercel/analytics": "^0.1.6",
     "classnames": "^2.2.6",
     "firebase": "^8.2.1",
     "mixpanel-browser": "^2.41.0",
     "next": "^12.3.0",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "17.0.1",
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.10",
     "react-palette": "^1.0.2",
+    "react-toastify": "^9.1.1",
     "sass": "^1.32.0",
     "ui-box": "^4.1.0"
   },
@@ -27,8 +30,12 @@
     "@types/node": "^14.14.17",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.23.0",
     "eslint-config-next": "^12.3.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.3"
   }
 }
