--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "emulate": "firebase emulators:start --import=dummy_data"
   },
   "dependencies": {
     "@tippyjs/react": "^4.2.6",
