--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.2.1",
     "mixpanel-browser": "^2.41.0",
     "next": "^12.3.0",
+    "posthog-js": "^1.96.1",
     "react": "17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.2",
